--- a/users/src/main/resources/application.properties
+++ b/users/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 
 jwt.secret=sample
 
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/users
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=${DATABASE_URL:jdbc:mysql://localhost:3306/imt5}
+spring.datasource.username=${DATABASE_USERNAME:root}
+spring.datasource.password=${DATABASE_PASSWORD:root}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=none
 
-spring.flyway.user=root
-spring.flyway.password=root
-spring.flyway.schemas=users
-spring.flyway.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/users
+spring.flyway.user=${DATABASE_USERNAME:root}
+spring.flyway.password=${DATABASE_PASSWORD:root}
+spring.flyway.schemas=imt5
+spring.flyway.url=${DATABASE_URL:jdbc:mysql://localhost:3306/imt5}
 
 #spring.jpa.show-sql: true
