--- a/.github/workflows/deploy-main-ms.yml
+++ b/.github/workflows/deploy-main-ms.yml
@@ -1,4 +1,4 @@
-name: Deploy to Amazon ECS
+name: Deploy Service to Amazon ECS
 
 on:
   push:
@@ -8,11 +8,11 @@ on:
 env:
   AWS_REGION: eu-north-1                   # set this to your preferred AWS region, e.g. us-west-1
   ECR_REPOSITORY: imt-repository           # set this to your Amazon ECR repository name
-  # ECS_SERVICE: MY_ECS_SERVICE                 # set this to your Amazon ECS service name
-  # ECS_CLUSTER: MY_ECS_CLUSTER                 # set this to your Amazon ECS cluster name
-  # ECS_TASK_DEFINITION: MY_ECS_TASK_DEFINITION # set this to the path to your Amazon ECS task definition
+  ECS_SERVICE: users                 # set this to your Amazon ECS service name
+  ECS_CLUSTER: imt5                 # set this to your Amazon ECS cluster name
+  ECS_TASK_DEFINITION: .aws/task-definition-ms.json # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
-  # CONTAINER_NAME: MY_CONTAINER_NAME           # set this to the name of the container in the
+  CONTAINER_NAME: users           # set this to the name of the container in the
                                                # containerDefinitions section of your task definition
 
 jobs:
@@ -40,11 +40,26 @@ jobs:
         id: build-image
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          IMAGE_TAG: users-${{ github.sha }}
+          IMAGE_TAG: ${{ github.sha }}
         run: |
           # Build a docker container and
           # push it to ECR so that it can
           # be deployed to ECS.
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG ./users
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          docker tag $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG $ECR_REGISTRY/$ECR_REPOSITORY:latest
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
           echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
+
+      - name: Restart Containers
+        id: deploy-image
+        uses: appleboy/ssh-action@v0.1.10
+        with:
+          host: data.xapik.org
+          username: ubuntu
+          key: ${{ secrets.AWS_SSH_KEY }}
+          port: 22
+          script: |
+            cd ~/app
+            docker compose pull
+            docker compose up -d 
